tests/test_files/default/neg/bad_flow3.s
	restrict r0 (RO, GLOBAL) 				; FAIL: attempt to restrict a SealRange with a Regular permission
	halt
